handlebars_embed, handlebars_precompile

--- a/package.json
+++ b/package.json
@@ -21,7 +21,9 @@
     }
   ],
   "main": "grunt.js",
-  "bin": "bin/grunt-emberify",
+  "bin": {
+    "grunt-emberify": "bin/grunt-emberify"
+  },
   "engines": {
     "node": "*"
   },
